--- a/projects/haztrace.html
+++ b/projects/haztrace.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Movie Recommender</title>
+    <title>Image Generator</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,19 +43,14 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Music Streaming Website</h2>
+              <h2 style="color:#12d640">Haztrace - Pack and Repack</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, Bootstrap, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://galvanic-music.herokuapp.com/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/MusicPlayer" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: React JS, Node JS, Javascript, Firebase, Nginx</li>
+                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
               </ul>
   
-              <p>
-                Django based music streaming website.             
-              </p>
-              <p>
-                User can register/login to the web app, play song, view detailed information of song, search song based on filters such as language and singers, create playlist, add/remove songs to/from playlist, add/remove songs to/from favourites, explore recently played songs.              
-              </p>
+                <p>I'm as Web Developer at <b>Speire Innovation Limited</b></p>
+                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
             </div>
   
           </div>
