--- a/projects/yogya.html
+++ b/projects/yogya.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Movie Recommender</title>
+    <title>Image Generator</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,19 +43,14 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Movie Recommender</h2>
+              <h2 style="color:#12d640">Yogya - Ecomercee</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, JavaScript, Bootstrap, SQLite, Pandas, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://awesome-movie-recommender.herokuapp.com/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/movie_recommender" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: Laravel, PHP, HTML, CSS, MySQL</li>
+                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
               </ul>
   
-              <p>
-                Django based movie recommender system. I have used collaborative filtering technique to recommend movies to the users.             
-              </p>
-              <p>
-                User can register/login to the web app. Search through different movies and explore them. User can get movie recommendations based on the ratings he/she gives to the movie. User can add movies to their watch list.              
-              </p>
+                <p>I'm as Web Developer at <b>Smooets Teknologi Limited</b></p>
+                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
             </div>
   
           </div>
