--- a/projects/astar.html
+++ b/projects/astar.html
@@ -45,12 +45,15 @@
               <br>
               <h2 style="color:#12d640">Agency for Science, Technology and Research (A*STAR)</h2>
               <ul>
+                <li><strong>Client:</strong> A*STAR</li>
                 <li><strong>Tech Stack</strong>: ASP Net, C#, HTML, CSS, Entity Framework</li>
-                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>URL</strong>: <a href="https://www.a-star.edu.sg" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Xtremax Teknologi Limited</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Xtremax Teknologi Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
+                <p>Task</p>
+                <p>1. Develop a new custom page and seamlessly integrate it with a new table in the database to enhance website functionality.</p>
+                <p>2. Implement Search Engine Optimization (SEO) techniques to improve the website's visibility and ranking on search engine results pages (SERPs).</p>
             </div>
   
           </div>
