--- a/projects/atlanticseakayaking.html
+++ b/projects/atlanticseakayaking.html
@@ -43,15 +43,21 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Atlantic Sea Kayaking - Trip Booking</h2>
+              <h2 style="color:#12d640">Atlantic Sea Kayaking - Trip Booking</h2>              
               <ul>
+                <li><strong>Client:</strong> Atlantic Sea Kayaking</li>
                 <li><strong>Tech Stack</strong>: Wordpress, PHP, HTML, CSS, MySQL</li>
                 <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Speire Innovation Limited</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Speire Innovation Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
-            </div>
+                <p>Task</p>
+                <p>1. Develop a new custom page and seamlessly integrate it with a new table in the database.</p>
+                <p>2. Implement a custom hook to efficiently trigger elements on the page.</p>
+                <p>3. Conduct thorough bug monitoring and promptly address any identified issues.</p>
+                <p>4. Apply styling enhancements to improve the visual presentation and user experience of elements on the page.</p>
+                <p>5. Integrate relevant plugins with our custom module to enhance website functionality.</p>
+                <p>6. Ensure the plugins utilized are kept up to date with the latest versions to maintain optimal performance and security.</p>
   
           </div>
   
