--- a/projects/clubspraoi.html
+++ b/projects/clubspraoi.html
@@ -43,14 +43,21 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Clubspraoi - Affordable and flexible booking options</h2>
+              <h2 style="color:#12d640">Clubspraoi - Affordable and flexible booking options</h2>              
               <ul>
+                <li><strong>Client:</strong> Clubspraoi</li>
                 <li><strong>Tech Stack</strong>: Wordpress, PHP, HTML, CSS, MySQL</li>
-                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>URL</strong>: <a href="https://clubspraoi.ie" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Speire Innovation Limited</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Speire Innovation Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
+                <p>Task</p>
+                <p>1. Develop a comprehensive booking module to facilitate seamless appointment scheduling and management.</p>
+                <p>2. Design and implement an intuitive admin module to empower efficient backend management functionalities.</p>
+                <p>3. Create a dedicated coordinator module with specialized features tailored to streamline coordination tasks.</p>
+                <p>4. Integrate Stripe Payment gateway to enable secure and convenient online transactions.</p>
+                <p>5. Craft interactive web pages to enhance user engagement and interactivity.</p>
+                <p>6. Establish a cronjob-based payment reminder system to ensure timely payment notifications for users.</p>
             </div>
   
           </div>
