--- a/projects/kreditplus.html
+++ b/projects/kreditplus.html
@@ -44,13 +44,22 @@
             <div class="col-lg-12 portfolio-info">
               <br>
               <h2 style="color:#12d640">Kredit Plus - Loan Application</h2>
+
               <ul>
+                <li><strong>Client:</strong> Kredit Plus</li>
                 <li><strong>Tech Stack</strong>: Laravel, PHP, HTML, CSS, PostgreSQL</li>
-                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>URL</strong>: <a href="https://www.kreditplus.com" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Smooets Teknologi Ltd.</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Smooets Teknologi Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
+                <p>Task</p>
+                <p>1. Develop multiple APIs and thoroughly document them on Swagger for seamless reference by mobile developers.</p>
+                <p>2. Create a new module within the CMS Admin interface to facilitate efficient content management and administration.</p>
+                <p>3. Conduct regular bug monitoring and promptly address any identified issues to ensure optimal system performance.</p>
+                <p>4. Implement access to APIs within the CMS to enable seamless integration and data retrieval.</p>
+                <p>5. Maintain and configure the NGINX server to ensure smooth and uninterrupted website operations.</p>
+                <p>6. Establish integration with third-party APIs to gather product data efficiently and accurately.</p>
+
             </div>
   
           </div>
