--- a/projects/tabsquare.html
+++ b/projects/tabsquare.html
@@ -45,12 +45,17 @@
               <br>
               <h2 style="color:#12d640">Tab Square - Smart Restaurant System</h2>
               <ul>
+                <li><strong>Client:</strong> Tab Square</li>
                 <li><strong>Tech Stack</strong>: NodeJS, EJS Template Engine, HTML, Javascript</li>
-                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>URL</strong>: <a href="https://tabsquare.ai" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Smooets Teknologi Ltd.</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Smooets Teknologi Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
+                <p>Task</p>
+                <p>1. Refine and modify existing API-based requests to improve functionality and performance.</p>
+                <p>2. Develop new API-based requests to meet additional requirements and functionalities.</p>
+                <p>3. Configure Webhooks for efficient retrieval of order status updates.</p>
+                <p>4. Optimize database queries to enhance system performance and efficiency.</p>
             </div>
   
           </div>
