--- a/projects/yogya.html
+++ b/projects/yogya.html
@@ -45,12 +45,17 @@
               <br>
               <h2 style="color:#12d640">Yogya - Ecomercee</h2>
               <ul>
+                <li><strong>Client:</strong> Yogya</li>
                 <li><strong>Tech Stack</strong>: Laravel, PHP, HTML, CSS, MySQL</li>
-                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>URL</strong>: <a href="https://yogyaonline.co.id" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Smooets Teknologi Ltd.</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Smooets Teknologi Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
+                <p>Task</p>
+                <p>1. Refine and modify existing API-based requests to optimize functionality and performance.</p>
+                <p>2. Develop a new API-based request system to accommodate additional functionalities and user requirements.</p>
+                <p>3. Seamlessly integrate with a Payment Gateway to facilitate secure and convenient online transactions.</p>
+                <p>4. Design and implement a custom CMS Admin module tailored to meet specific content management needs.</p>
             </div>
   
           </div>
