--- a/projects/futuready.html
+++ b/projects/futuready.html
@@ -44,13 +44,20 @@
             <div class="col-lg-12 portfolio-info">
               <br>
               <h2 style="color:#12d640">Futuready - Insurance Broker</h2>
+
               <ul>
+                <li><strong>Client:</strong> Futuready</li>
                 <li><strong>Tech Stack</strong>: PHP, Code Igniter, HTML, CSS, MySQL</li>
-                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>URL</strong>: <a href="https://futuready.com" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Indocyber Global Teknologi Limited</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Indocyber Global Teknologi Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
+                <p>Task</p>
+                <p>1. Implement a cronjob system to automatically send policies to customers, ensuring timely delivery of documents.</p>
+                <p>2. Develop a custom module within the admin interface to facilitate streamlined management and administrative tasks.</p>
+                <p>3. Enhance the frontend page styling to improve the visual appeal and user experience of the website.</p>
+                <p>4. Integrate with a third-party assurance partner to expand service offerings and provide additional benefits to users.</p>
+                <p>5. Conduct thorough testing and monitoring to ensure the reliability, security, and performance of the system.</p>
             </div>
   
           </div>
