--- a/projects/haztrace.html
+++ b/projects/haztrace.html
@@ -44,13 +44,21 @@
             <div class="col-lg-12 portfolio-info">
               <br>
               <h2 style="color:#12d640">Haztrace - Pack and Repack</h2>
+
               <ul>
+                <li><strong>Client:</strong> Haztrace</li>
                 <li><strong>Tech Stack</strong>: React JS, Node JS, Javascript, Firebase, Nginx</li>
-                <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
+                <li><strong>URL</strong>: <a href="https://tridentsafety.com" target="_blank">Project Link</a></li>
+                <li><strong>Project From: </strong>: Speire Innovation Limited</li>
               </ul>
   
-                <p>I'm as Web Developer at <b>Speire Innovation Limited</b></p>
-                <p>Where my responsibilities include crafting websites through programming, rigorous testing prior to deployment and ongoing maintenance, meticulous debugging of code, providing support for website updates to our organization or clients, close collaboration with designers to realize their creative vision, as well as managing database connections and integrations."</p>
+                <p>Task</p>
+                <p>1. Develop a new custom page and seamlessly integrate it with a new table in the database.</p>
+                <p>2. Implement a custom hook to efficiently trigger elements on the page.</p>
+                <p>3. Conduct thorough bug monitoring and resolve any identified issues.</p>
+                <p>4. Apply styling to enhance the visual appeal and user experience of elements on the page.</p>
+                <p>5. Utilize plugins and seamlessly integrate them with our custom module.</p>
+                <p>6. Design and implement reusable functions to optimize code efficiency and maintainability.</p>
             </div>
   
           </div>
