--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1l8qp3-lkd2bD8-Y15brvCV1TQZfIsne0/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/19-NKEg7THq1Dj1obGX91PhBhgEmyXXWL/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -310,9 +310,13 @@
                 <h5 style="text-align:left;">Speire Inovation Ltd - Ireland</h5>
                 <p style="text-align:left;color:#fff"><em>March 2022 - Present (2 Years 1 Month)</em></p>
                 <ul style="text-align:left;">
-                  <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li>
-                  <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li>
-                  <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li>
+                  <li>Build scalable and robust APIs and system.</li>
+                  <li>Build reusable code and libraries for future use.</li>
+                  <li>Optimize code and application for maximum speed and scalability.</li>
+                  <li>Ensure stability and performance of the system.</li>
+                  <li>Implement security and data protection.</li>
+                  <li>Identify and fix bottlenecks and bugs on our system.</li>
+                  <li>Implementing new features in ongoing projects or creating projects from scratch according to client requests.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -320,8 +324,10 @@
                 <h5 style="text-align:left;">Smooets Teknologi Ltd - Indonesia</h5>
                 <p style="text-align:left;color:#fff"><em>Dec 2020 - Present</em></p>
                 <ul style="text-align:left;">
-                  <li>Documented and coded server‑less web application for the hotel industry and designed REST API using Flask‑based JWT authentication.</li>
-                  <li>Redeveloped an existing system to support customer account management, scheduling, and time tracking; enabled dynamic API calls with the help of Amazon API Gateway, AWS Lambda, and DynamoDB.</li>
+                  <li>Ensure project needs by studying program objectives, data input, and the final needs of the programmer with analyst, supervisor, and client.</li>
+                  <li>Arranging the needs of the project in the programming stage by analyzing program needs; prepare work flow charts and work diagrams using computerization capabilities, learning materials, programming languages, and logic.</li>
+                  <li>Processing the needs of the project by changing work flow information into language programmers and documentation of program development and its revision, too do a test, Changing the order of the program and/or code.</li>
+                  <li>Stay professional by maintaining client trust and protecting confidential information; contribute to the team by completing the results as needed, develop technical knowledge by attending training, assessing publications from professionals, build personal networks, participate in a professional environment.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -329,7 +335,8 @@
                 <h5 style="text-align:left;">Xtremax Ltd - Indonesia</h5>
                 <p style="text-align:left;color:#fff"><em>Jun 2020 - Sep 2020</em></p>
                 <ul style="text-align:left;">
-                  <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li>
+                  <li>Tested, designed, and developed backend APIs.</li>
+                  <li>Create custom page and integrate with Backend API.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -337,10 +344,12 @@
                 <h5 style="text-align:left;">Indocyber Global Teknologi Ltd - Indonesia</h5>
                 <p style="text-align:left;color:#fff"><em>Jan 2020 - May 2020</em></p>
                 <ul style="text-align:left;">
-                  <li>Optimized image processing algorithm of pill detection by creating customized MASKRCNN  algorithm, increasing accuracy by 15%; trained classification algorithm with the help of triplet loss to learn the image embedding of pill, reducing the hassle of collecting data of new pills. </li>
-                  <li>Devised a pipeline of the project to incorporate it into the product of the company. Implemented Restful APIs in Django that enabled our quality Analyst team to increase reporting speed by 46%.</li>
-                  <li>Built a web app to onboard data from the company’s product using Flask, Postgres, and AWS S3, enabling interactive charts in real-time.</li>
-                  <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
+                  <li>Understand the client's needs in a project.</li>
+                  <li>Analyzing the client system that has been running.</li>
+                  <li>Understand the Language of the Assigned Program.</li>
+                  <li>Conduct trials, implementation, and provide training in a project.</li>
+                  <li>Maintain good relations with outsiders and company customers.</li>
+                  <li>Maintain and foster teamwork.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -348,8 +357,10 @@
                 <h5 style="text-align:left;">Smooets Teknologi Ltd - Indonesia</h5>
                 <p style="text-align:left;color:#fff"><em>July 2018 - Dec 2019</em></p>
                 <ul style="text-align:left;">
-                  <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
-                  <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
+                  <li>Ensure project needs by studying program objectives, data input, and the final needs of the programmer with analyst, supervisor, and client.</li>
+                  <li>Arranging the needs of the project in the programming stage by analyzing program needs; prepare work flow charts and work diagrams using computerization capabilities, learning materials, programming languages, and logic.</li>
+                  <li>Processing the needs of the project by changing work flow information into language programmers and documentation of program development and its revision, too do a test, Changing the order of the program and/or code.</li>
+                  <li>Stay professional by maintaining client trust and protecting confidential information; contribute to the team by completing the results as needed, develop technical knowledge by attending training, assessing publications from professionals, build personal networks, participate in a professional environment.</li>
                 </ul>
             </div>
           </div>
