--- a/projects/astar.html
+++ b/projects/astar.html
@@ -46,9 +46,9 @@
               <h2 style="color:#12d640">Agency for Science, Technology and Research (A*STAR)</h2>
               <ul>
                 <li><strong>Client:</strong> A*STAR</li>
-                <li><strong>Tech Stack</strong>: ASP Net, C#, HTML, CSS, Entity Framework</li>
+                <li><strong>Tech Stack:</strong> ASP Net, C#, HTML, CSS, Entity Framework</li>
                 <li><strong>URL</strong>: <a href="https://www.a-star.edu.sg" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Xtremax Teknologi Limited</li>
+                <li><strong>Project From:</strong> Xtremax Teknologi Limited</li>
               </ul>
   
                 <p>Task</p>
