--- a/projects/clubspraoi.html
+++ b/projects/clubspraoi.html
@@ -46,9 +46,9 @@
               <h2 style="color:#12d640">Clubspraoi - Affordable and flexible booking options</h2>              
               <ul>
                 <li><strong>Client:</strong> Clubspraoi</li>
-                <li><strong>Tech Stack</strong>: Wordpress, PHP, HTML, CSS, MySQL</li>
+                <li><strong>Tech Stack:</strong> Wordpress, PHP, HTML, CSS, MySQL</li>
                 <li><strong>URL</strong>: <a href="https://clubspraoi.ie" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Speire Innovation Limited</li>
+                <li><strong>Project From:</strong> Speire Innovation Limited</li>
               </ul>
   
                 <p>Task</p>
