--- a/projects/futuready.html
+++ b/projects/futuready.html
@@ -47,9 +47,9 @@
 
               <ul>
                 <li><strong>Client:</strong> Futuready</li>
-                <li><strong>Tech Stack</strong>: PHP, Code Igniter, HTML, CSS, MySQL</li>
+                <li><strong>Tech Stack:</strong> PHP, Code Igniter, HTML, CSS, MySQL</li>
                 <li><strong>URL</strong>: <a href="https://futuready.com" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Indocyber Global Teknologi Limited</li>
+                <li><strong>Project From:</strong> Indocyber Global Teknologi Limited</li>
               </ul>
   
                 <p>Task</p>
