--- a/projects/haztrace.html
+++ b/projects/haztrace.html
@@ -47,9 +47,9 @@
 
               <ul>
                 <li><strong>Client:</strong> Haztrace</li>
-                <li><strong>Tech Stack</strong>: React JS, Node JS, Javascript, Firebase, Nginx</li>
-                <li><strong>URL</strong>: <a href="https://tridentsafety.com" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Speire Innovation Limited</li>
+                <li><strong>Tech Stack:</strong> React JS, Node JS, Javascript, Firebase, Nginx</li>
+                <li><strong>URL:</strong> <a href="https://tridentsafety.com" target="_blank">Project Link</a></li>
+                <li><strong>Project From:</strong> Speire Innovation Limited</li>
               </ul>
   
                 <p>Task</p>
