--- a/projects/kreditplus.html
+++ b/projects/kreditplus.html
@@ -47,9 +47,9 @@
 
               <ul>
                 <li><strong>Client:</strong> Kredit Plus</li>
-                <li><strong>Tech Stack</strong>: Laravel, PHP, HTML, CSS, PostgreSQL</li>
-                <li><strong>URL</strong>: <a href="https://www.kreditplus.com" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Smooets Teknologi Ltd.</li>
+                <li><strong>Tech Stack:</strong> Laravel, PHP, HTML, CSS, PostgreSQL</li>
+                <li><strong>URL:</strong> <a href="https://www.kreditplus.com" target="_blank">Project Link</a></li>
+                <li><strong>Project From:</strong> Smooets Teknologi Ltd.</li>
               </ul>
   
                 <p>Task</p>
