--- a/projects/tabsquare.html
+++ b/projects/tabsquare.html
@@ -46,9 +46,9 @@
               <h2 style="color:#12d640">Tab Square - Smart Restaurant System</h2>
               <ul>
                 <li><strong>Client:</strong> Tab Square</li>
-                <li><strong>Tech Stack</strong>: NodeJS, EJS Template Engine, HTML, Javascript</li>
-                <li><strong>URL</strong>: <a href="https://tabsquare.ai" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Smooets Teknologi Ltd.</li>
+                <li><strong>Tech Stack:</strong> NodeJS, EJS Template Engine, HTML, Javascript</li>
+                <li><strong>URL:</strong> <a href="https://tabsquare.ai" target="_blank">Project Link</a></li>
+                <li><strong>Project From:</strong> Smooets Teknologi Ltd.</li>
               </ul>
   
                 <p>Task</p>
