--- a/projects/atlanticseakayaking.html
+++ b/projects/atlanticseakayaking.html
@@ -46,9 +46,9 @@
               <h2 style="color:#12d640">Atlantic Sea Kayaking - Trip Booking</h2>              
               <ul>
                 <li><strong>Client:</strong> Atlantic Sea Kayaking</li>
-                <li><strong>Tech Stack</strong>: Wordpress, PHP, HTML, CSS, MySQL</li>
+                <li><strong>Tech Stack:</strong> Wordpress, PHP, HTML, CSS, MySQL</li>
                 <li><strong>URL</strong>: <a href="https://www.atlanticseakayaking.com" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Speire Innovation Limited</li>
+                <li><strong>Project From:</strong> Speire Innovation Limited</li>
               </ul>
   
                 <p>Task</p>
