--- a/projects/yogya.html
+++ b/projects/yogya.html
@@ -46,9 +46,9 @@
               <h2 style="color:#12d640">Yogya - Ecomercee</h2>
               <ul>
                 <li><strong>Client:</strong> Yogya</li>
-                <li><strong>Tech Stack</strong>: Laravel, PHP, HTML, CSS, MySQL</li>
-                <li><strong>URL</strong>: <a href="https://yogyaonline.co.id" target="_blank">Project Link</a></li>
-                <li><strong>Project From: </strong>: Smooets Teknologi Ltd.</li>
+                <li><strong>Tech Stack:</strong> Laravel, PHP, HTML, CSS, MySQL</li>
+                <li><strong>URL:</strong> <a href="https://yogyaonline.co.id" target="_blank">Project Link</a></li>
+                <li><strong>Project From:</strong> Smooets Teknologi Ltd.</li>
               </ul>
   
                 <p>Task</p>
