--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Web Developer</a><br> </h4>
-                <h5 style="text-align:left;">Speire Inovation Ltd - Ireland</h5>
+                <h5 style="text-align:left;">Speire Innovation Ltd - Ireland</h5>
                 <p style="text-align:left;color:#fff"><em>March 2022 - Present (2 Years 1 Month)</em></p>
                 <ul style="text-align:left;">
                   <li>Build scalable and robust APIs and system.</li>
